[tool.poetry]
name = "asseme"
version = "0.1.0"
description = ""
authors = ["craigryy <harriajames97@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
typer = {extras = ["all"], version = "^0.7.0"}
tabulate = "^0.9.0"
SQLAlchemy = "^2.0.5"
unittest = "^0.0"
coverage = "^7.2.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^6.0.0"
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
